# ESP32-S3-RGB-Panel

./: README.md
components/lvgl/: CMakeLists.txt  lv_conf.h  lvgl.h
components/lvgl/demos/: README.md  lv_demos.h  lv_demos.mk
components/lvgl/demos/benchmark/: lv_demo_benchmark.c  lv_demo_benchmark.h
components/lvgl/demos/keypad_encoder/: README.md  lv_demo_keypad_encoder.c  lv_demo_keypad_encoder.h
components/lvgl/demos/music/: lv_demo_music.c  lv_demo_music.h  lv_demo_music_list.c  lv_demo_music_main.c
components/lvgl/demos/stress/: lv_demo_stress.c  lv_demo_stress.h
components/lvgl/demos/widgets/: lv_demo_widgets.c  lv_demo_widgets.h
components/lvgl/porting/: lv_port_disp.c  lv_port_disp.h  lv_port_fs.c  lv_port_fs.h  lv_port_indev.c  lv_port_indev.h
components/lvgl/src/: lv_api_map.h  lv_conf_internal.h  lv_conf_kconfig.h
components/lvgl/src/core/: lv_disp.c  lv_disp.h  lv_event.c  lv_event.h  lv_group.c  lv_group.h  lv_indev.c  lv_indev.h  lv_indev_scroll.c  lv_obj.c  lv_obj.h  lv_obj_class.c  lv_obj_class.h  lv_obj_draw.c  lv_obj_draw.h  lv_obj_pos.c  lv_obj_pos.h  lv_obj_scroll.c  lv_obj_scroll.h  lv_obj_style.c  lv_obj_style.h  lv_obj_style_gen.c  lv_obj_style_gen.h  lv_obj_tree.c  lv_obj_tree.h  lv_refr.c  lv_refr.h  lv_theme.c  lv_theme.h
components/lvgl/src/draw/: lv_draw.c  lv_draw.h  lv_draw.mk  lv_draw_arc.c  lv_draw_arc.h  lv_draw_img.c  lv_draw_img.h  lv_draw_label.c  lv_draw_label.h  lv_draw_line.c  lv_draw_line.h  lv_draw_mask.c  lv_draw_mask.h  lv_draw_rect.c  lv_draw_rect.h  lv_draw_triangle.c  lv_draw_triangle.h  lv_img_buf.c  lv_img_decoder.c
components/lvgl/src/extra/: README.md  lv_extra.c
components/lvgl/src/font/: lv_font.c  lv_font.h  lv_font_dejavu_16_persian_hebrew.c  lv_font_fmt_txt.c  lv_font_loader.c  lv_font_montserrat_10.c  lv_font_montserrat_12.c  lv_font_montserrat_12_subpx.c  lv_font_montserrat_14.c  lv_font_montserrat_16.c  lv_font_montserrat_18.c  lv_font_montserrat_20.c  lv_font_montserrat_22.c  lv_font_montserrat_24.c  lv_font_montserrat_26.c  lv_font_montserrat_28.c  lv_font_montserrat_28_compressed.c  lv_font_montserrat_30.c  lv_font_montserrat_32.c  lv_font_montserrat_34.c  lv_font_montserrat_36.c  lv_font_montserrat_38.c  lv_font_montserrat_40.c  lv_font_montserrat_42.c  lv_font_montserrat_44.c  lv_font_montserrat_46.c  lv_font_montserrat_48.c  lv_font_montserrat_8.c  lv_font_simsun_16_cjk.c  lv_font_unscii_16.c  lv_font_unscii_8.c  lv_symbol_def.h
components/lvgl/src/gpu/: lv_gpu.mk
components/lvgl/src/hal/: lv_hal_disp.c  lv_hal_disp.h  lv_hal_indev.c  lv_hal_indev.h  lv_hal_tick.c  lv_hal_tick.h
components/lvgl/src/misc/: lv_anim.c  lv_anim.h  lv_anim_timeline.c  lv_anim_timeline.h  lv_area.c  lv_area.h  lv_assert.h  lv_async.c  lv_async.h  lv_bidi.c  lv_bidi.h  lv_color.c  lv_color.h  lv_fs.c  lv_fs.h  lv_gc.c  lv_gc.h  lv_ll.c  lv_ll.h  lv_log.c  lv_log.h  lv_lru.c  lv_lru.h  lv_math.c  lv_math.h  lv_mem.c  lv_mem.h  lv_misc.mk  lv_printf.c  lv_printf.h  lv_style.c  lv_style.h  lv_style_gen.c  lv_style_gen.h  lv_timer.c  lv_timer.h  lv_tlsf.c  lv_tlsf.h  lv_txt.c  lv_txt.h  (+4 more)
components/lvgl/src/widgets/: lv_arc.c  lv_arc.h  lv_bar.c  lv_bar.h  lv_btn.c  lv_btn.h  lv_btnmatrix.c  lv_btnmatrix.h  lv_canvas.c  lv_canvas.h  lv_checkbox.c  lv_checkbox.h  lv_dropdown.c  lv_dropdown.h  lv_img.c  lv_img.h  lv_label.c  lv_label.h  lv_line.c  lv_line.h  lv_objx_templ.c  lv_objx_templ.h  lv_roller.c  lv_roller.h  lv_slider.c  lv_slider.h  (+6 more)
(+255 files in other folders)
